split into css and js directories

--- a/index.html
+++ b/index.html
@@ -3,9 +3,9 @@
   <head>
     <meta content="text/html;charset=utf-8" http-equiv="Content-Type">
     <meta content="utf-8" http-equiv="encoding">
-    <link rel="stylesheet" href="./mm.css">
+    <link rel="stylesheet" href="./css/mm.css">
     <title>Mixed Messages - A Random Quote Generator</title>
-    <script type="text/javascript" src="mm.js"></script>
+    <script type="text/javascript" src="./js/mm.js"></script>
   </head>
   <body onload="load()">
     <H1>Mixed Messages - A Random Quote Generator</H1>
