--- a/index.html
+++ b/index.html
@@ -8,9 +8,13 @@
     <script type="text/javascript" src="./js/mm.js"></script>
   </head>
   <body onload="load()">
-    <H1>Mixed Messages - A Random Quote Generator</H1>
-    <blockquote id="randomizeMe">
-      There's nothing here yet.
-    </blockquote>
+    <header>
+      <H1>Mixed Messages - A Random Quote Generator</H1>
+    </header>
+    <main>
+      <blockquote id="randomizeMe">
+        There's nothing here yet.
+      </blockquote>
+    </main>
   </body>
 </html>
